--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="TextUtils is a Utility which can be used to manipulate your text in the way you want"
+      content="TextUtils is a Word Counter and a Character Counter Utility which can be used to manipulate your text in the way you want. You can remove extra spaces, copy the manipulated text as well as covert your text from Uppercase to Lowercase and Lowercase to Uppercase"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-16x16.png" />
     <!--
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>TextUtils - Home</title>
+    <title>TextUtils - word counter| character counter | Lowercase to Uppercase | Uppercase to Lowercase</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
